[INFER] Bail from GetProperty IC if js_FindProperty triggered recompilation, bug 647547.